fixed navbar covering things again

--- a/deploy/sitelayout/css/theme.css
+++ b/deploy/sitelayout/css/theme.css
@@ -9,8 +9,10 @@ footer {
   text-align: center;
 }
 /* title lines in .explain-text which are referred/linked to. this rule is so that the fixed navbar doesn't cover them. */
-.explain-text h4 [id],
-.explain-text h1 [id] {
+.explain-text #about,
+.explain-text #contact,
+.explain-text #title,
+.explain-text #sitemap {
   padding-top: 60px;
   margin-top: -60px;
   display: inline-block; /* required for webkit browsers */
